--- a/source/photo.html
+++ b/source/photo.html
@@ -11,25 +11,22 @@
     <header class="page-header">
 
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--active">
+            <li class="site-list__item site-list__item-top site-list__item--active">
               <a href="index.html">Главная</a>
+              <button class="site-list__button-top" type="button">Закрыть меню</button>
             </li>
-            <li class="site-list__item">
-              <a href="photo.html">Фото и видео</a>
-            </li>
-            <li class="site-list__item">
-              <a href="form.html">Форма отзыва</a>
-            </li>
-            <li class="site-list__item">
+            <li class="site-list__item"><a href="photo.html">Фото и видео</a></li>
+            <li class="site-list__item"><a href="form.html">Форма отзыва</a></li>
+            <li class="site-list__item site-list__item--strips">
               <a href="#">HTML ACADEMY</a>
             </li>
+            <li class="site-list__item site-list__item-down">
+              <a href="index.html"><img class="main-nav__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип туристического агенства «Седона»"></a>
+              <button class="site-list__button-down" type="button">Открыть меню</button>
+            </li>
           </ul>
-          <a class="main-nav__logo" href="index.html">
-            <img class="main-nav__logo-image" src="img/logotyle-mobile-svg.svg" width="102" height="83" alt="Логотип туристического агенства «Седона»">
-          </a>
         </div>
       </nav>
 
@@ -54,8 +51,8 @@
               <b class="photos-item__title">Неродные просторы</b>
               <p class="photos-item__author">Автор фото: Борис</p>
               <div>
-                <button class="photos-item__likes photos-item__likes--trump" type="button"></button>
-                <span class="photos-item__likes">1350</span>
+                <button class="photos-item__likes" type="button"></button>
+                <span class="photos-item__numbers">1350</span>
               </div>
             </li>
             <li class="photos-item">
@@ -63,16 +60,17 @@
               <b class="photos-item__title">Местная растительность</b>
               <p class="photos-item__author">Автор фото: Сергей</p>
               <div>
-                <button class="photos-item__likes photos-item__likes--trump" type="button"></button>
-                <span class="photos-item__likes photos-item__likes--trump">143</span>
+                <button class="photos-item__likes" type="button"></button>
+                <span class="photos-item__numbers">143</span>
               </div>
             </li>
             <li class="photos-item">
               <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Фотография дороги в горах"></a>
               <b class="photos-item__title">Дорога на север</b>
-              <p class="photos-item__author">Автор фото: Петр</p><div>
-                <button class="photos-item__likes photos-item__likes--trump" type="button"></button>
-                <span class="photos-item__likes photos-item__likes--trump">96</span>
+              <p class="photos-item__author">Автор фото: Петр</p>
+              <div class="photos-item__positionlikes">
+                <button class="photos-item__likes" type="button"></button>
+                <span class="photos-item__numbers">96</span>
               </div>
             </li>
             <li class="photos-item">
@@ -80,8 +78,8 @@
               <b class="photos-item__title">Мост дьявола</b>
               <p class="photos-item__author">Автор фото: Антон</p>
               <div>
-                <button class="photos-item__likes photos-item__likes--trump" type="button"></button>
-                <span class="photos-item__likes photos-item__likes--trump">254</span>
+                <button class="photos-item__likes" type="button"></button>
+                <span class="photos-item__numbers">254</span>
               </div>
             </li>
           </ul>
@@ -97,13 +95,13 @@
         <b class="footer__title">#visitsedona</b>
         <ul class="social__list">
           <li class="social__item">
-            <a class="social__link social__link--twitter" href="https://twitter.com/sedona"></a>
+            <a class="social__link social__link--twitter" href="https://twitter.com/sedona">Мы в Твиттере</a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--facebook" href="https://www.facebook.com/sedona"></a>
+            <a class="social__link social__link--facebook" href="https://www.facebook.com/sedona">Мы в Фейсбуке</a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--youtube" href="https://www.youtube.com/sedona"></a>
+            <a class="social__link social__link--youtube" href="https://www.youtube.com/sedona">Мы в Ютубе</a>
           </li>
         </ul>
       </div>
@@ -112,7 +110,7 @@
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link copyright__link--htmlacademy" href="https://htmlacademy.ru/intensive/adaptive"></a>
       </div>
-
+ 
     </footer>
 
   </body>
