Задание 1 модуль 3, правка от 10.04.2020

--- a/source/index.html
+++ b/source/index.html
@@ -76,9 +76,8 @@
             <h3 class="bridge__title">Там есть мост дьявола</h3>
             <span class="bridge__number">– №2 –</span>
             <p class="bridge__recomendation">Да, по нему можно пройти! Если вы <br>осмелитесь, конечно</p>
-          </li>  
-          <div class="bridge__picture"><img src="img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="Фотография моста"></div>
-          
+            <span class="bridge__picture"><img src="img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="Фотография моста"></span>
+           </li> 
           <li class="square places">
             <h3 class="places__title">Небольшая площадь</h3>
             <span class="places__number">– №3 –</span>
