Модуль 2 задание 1 правка от 11.04.2020

--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
-    <link href="css/normalize.css" rel="stylesheet"> 
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="body">
@@ -11,11 +10,12 @@
     <header class="page-header">
 
       <nav class="main-nav">
+
         <div class="main-nav__wrapper">
+          <button class="main-nav__button" type="button"><span class="visually-hidden">Кнопка меню</span></button>
           <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item-top site-list__item--active">
+            <li class="site-list__item site-list__item--active">
               <a href="index.html">Главная</a>
-              <button class="site-list__button-top" type="button">Закрыть меню</button>
             </li>
             <li class="site-list__item"><a href="photo.html">Фото и видео</a></li>
             <li class="site-list__item"><a href="form.html">Форма отзыва</a></li>
@@ -24,7 +24,6 @@
             </li>
             <li class="site-list__item site-list__item-down">
               <a href="index.html"><img class="main-nav__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип туристического агенства «Седона»"></a>
-              <button class="site-list__button-down" type="button">Открыть меню</button>
             </li>
           </ul>
         </div>
@@ -35,12 +34,12 @@
     <main class="page-main">
 
       <h1 class="visually-hidden"> Сайт туристического агенства «Седона»</h1>
-   
+
       <section class="reasons">
 
         <h2 class="visually-hidden">Причины для посещения городка Седона</h2>
-         <div class="reasons__position">
-          <span class="reasons__position--sedona"><img class="reasons__picture" src="img/bg-back-mobile@1x.jpg" width="320" height="389" alt="sedona"></span>
+        <div class="reasons__position">
+          <span class="reasons__index1 reasons--sedona"><img class="reasons__index" src="img/text-sedona-index.svg" width="281" height="214" alt="sedona"></span>
           <p class="reasons__number-zero">Седона – небольшой <br> городок в Аризоне, <br> заслуживающий большего!</p>
           <p class="reasons__number-one">Рассмотрим 5 причин, по которым <br> Седона круче, чем Градн Каньон!</p>
         </div>
@@ -52,9 +51,9 @@
                 <h3 class="realtown__title">Настоящий городок</h3>
                 <span class="realtown__number">– №1 –</span>
                 <p class="realtown__recomendation">Седона не аттрацион для туристов, <br> там течёт своя жизнь</p>
-              </div> 
+              </div>
               <span class="realtown__picture"><img class="realtown__picture" src="img/main-city-mobile@1x.jpg" width="320" height="260" alt="фотография городка «Седона»"></span>
-              
+
                 <ul class="advantages">
                   <li class="advantages__item advantages__item--home">
                     <b class="advantages__title">Жильe</b>
@@ -77,7 +76,7 @@
             <span class="bridge__number">– №2 –</span>
             <p class="bridge__recomendation">Да, по нему можно пройти! Если вы <br>осмелитесь, конечно</p>
             <span class="bridge__picture"><img src="img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="Фотография моста"></span>
-           </li> 
+          </li>
           <li class="square places">
             <h3 class="places__title">Небольшая площадь</h3>
             <span class="places__number">– №3 –</span>
@@ -117,13 +116,13 @@
         <b class="footer__title">#visitsedona</b>
         <ul class="social__list">
           <li class="social__item">
-           <a class="social__link social__link--twitter" href="https://twitter.com/sedona">Мы в Твиттере</a>
+            <a class="social__link social__link--twitter" href="https://twitter.com/sedona"><span class="visually-hidden">Мы в Твиттере</span></a>
           </li>
           <li class="social__item">
-         <a class="social__link social__link--facebook" href="https://www.facebook.com/sedona">Мы в Фейсбуке</a>
+            <a class="social__link social__link--facebook" href="https://www.facebook.com/sedona"><span class="visually-hidden">Мы в Фейсбуке</span></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--youtube" href="https://www.youtube.com/sedona">Мы в Ютубе</a>
+            <a class="social__link social__link--youtube" href="https://www.youtube.com/sedona"><span class="visually-hidden">Мы в Ютубе</span></a>
           </li>
         </ul>
       </div>
@@ -134,6 +133,5 @@
       </div>
 
     </footer>
-
   </body>
 </html>
