--- a/source/form.html
+++ b/source/form.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
-    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
 
@@ -12,11 +11,12 @@
     <header class="page-header">
 
       <nav class="main-nav">
+
         <div class="main-nav__wrapper">
+          <button class="main-nav__button" type="button"><span class="visually-hidden">Кнопка меню</span></button>
           <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item-top site-list__item--active">
+            <li class="site-list__item site-list__item--active">
               <a href="index.html">Главная</a>
-              <button class="site-list__button-top" type="button">Закрыть меню</button>
             </li>
             <li class="site-list__item"><a href="photo.html">Фото и видео</a></li>
             <li class="site-list__item"><a href="form.html">Форма отзыва</a></li>
@@ -25,7 +25,6 @@
             </li>
             <li class="site-list__item site-list__item-down">
               <a href="index.html"><img class="main-nav__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип туристического агенства «Седона»"></a>
-              <button class="site-list__button-down" type="button">Открыть меню</button>
             </li>
           </ul>
         </div>
@@ -40,11 +39,11 @@
       <section class="form-section">
 
         <div class="form-head">
-          <span class="form-head__position form-head__picture--sedona"><img class="form-head__picture" src="img/bg-back-mobile@1x.jpg" width="320" height="158" alt="sedona"></span>
+          <span class="form-head--sedona"><img class="form-head__picture" src="img/text-sedona.svg" width="320" height="158" alt="sedona"></span>
           <h2 class="form-head__title">Оставьте свой отзыв</h2>
           <p class="form-head__text">Помогите нашим отелям стать лучше!<br>Оставьте отзыв о них, а так же о<br>посещённых вами <br>достопримечательностях</p>
         </div>
-        
+
         <form class="form-content" action="https://echo.htmlacademy.ru" method="POST">
 
           <fieldset class="customer">
@@ -130,20 +129,19 @@
 
     </main>
 
-
     <footer class="footer">
 
       <div class="footer__social social">
         <b class="footer__title">#visitsedona</b>
         <ul class="social__list">
           <li class="social__item">
-           <a class="social__link social__link--twitter" href="https://twitter.com/sedona">Мы в Твиттере</a>
+            <a class="social__link social__link--twitter" href="https://twitter.com/sedona"><span class="visually-hidden">Мы в Твиттере</span></a>
           </li>
           <li class="social__item">
-         <a class="social__link social__link--facebook" href="https://www.facebook.com/sedona">Мы в Фейсбуке</a>
+            <a class="social__link social__link--facebook" href="https://www.facebook.com/sedona"><span class="visually-hidden">Мы в Фейсбуке</span></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--youtube" href="https://www.youtube.com/sedona">Мы в Ютубе</a>
+            <a class="social__link social__link--youtube" href="https://www.youtube.com/sedona"><span class="visually-hidden">Мы в Ютубе</span></a>
           </li>
         </ul>
       </div>
@@ -154,6 +152,5 @@
       </div>
 
     </footer>
-
   </body>
 </html>
