--- a/source/photo.html
+++ b/source/photo.html
@@ -3,32 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
-    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
 
     <header class="page-header">
 
-      <nav class="main-nav">
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item-top site-list__item--active">
-              <a href="index.html">Главная</a>
-              <button class="site-list__button-top" type="button">Закрыть меню</button>
-            </li>
-            <li class="site-list__item"><a href="photo.html">Фото и видео</a></li>
-            <li class="site-list__item"><a href="form.html">Форма отзыва</a></li>
-            <li class="site-list__item site-list__item--strips">
-              <a href="#">HTML ACADEMY</a>
-            </li>
-            <li class="site-list__item site-list__item-down">
-              <a href="index.html"><img class="main-nav__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип туристического агенства «Седона»"></a>
-              <button class="site-list__button-down" type="button">Открыть меню</button>
-            </li>
-          </ul>
-        </div>
-      </nav>
+        <nav class="main-nav">
+
+          <div class="main-nav__wrapper">
+            <button class="main-nav__button" type="button"><span class="visually-hidden">Кнопка меню</span></button>
+            <ul class="main-nav__list site-list">
+              <li class="site-list__item site-list__item--active">
+                <a href="index.html">Главная</a>
+              </li>
+              <li class="site-list__item"><a href="photo.html">Фото и видео</a></li>
+              <li class="site-list__item"><a href="form.html">Форма отзыва</a></li>
+              <li class="site-list__item site-list__item--strips">
+                <a href="#">HTML ACADEMY</a>
+              </li>
+              <li class="site-list__item site-list__item-down">
+                <a href="index.html"><img class="main-nav__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип туристического агенства «Седона»"></a>
+              </li>
+            </ul>
+          </div>
+        </nav>
 
     </header>
 
@@ -39,7 +38,7 @@
       <section class="photos">
 
         <div class="photos-head">
-          <span class="photos-head__position photos-head__picture--sedona"><img class="photos-head__picture" src="img/bg-back-mobile@1x.jpg" width="320" height="158" alt="sedona"></span>
+          <span class="photos-head__position photos-head--sedona"><img class="photos-head__picture" src="img/text-sedona.svg" width="320" height="158" alt="sedona"></span>
           <h2 class="photos-head__title">Фото и видео</h2>
           <p class="photos-head__text">Не можете решиться на пушетествие<br> из-за курса? Фотографии помогут <br> вам забыть о политике и экономике. </p>
         </div>
@@ -50,8 +49,8 @@
               <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Фотография степи"></a>
               <b class="photos-item__title">Неродные просторы</b>
               <p class="photos-item__author">Автор фото: Борис</p>
-              <div>
-                <button class="photos-item__likes" type="button"></button>
+              <div class="photos-item__positionlikes">
+                <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
                 <span class="photos-item__numbers">1350</span>
               </div>
             </li>
@@ -59,8 +58,8 @@
               <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Фотография кактуса"></a>
               <b class="photos-item__title">Местная растительность</b>
               <p class="photos-item__author">Автор фото: Сергей</p>
-              <div>
-                <button class="photos-item__likes" type="button"></button>
+              <div class="photos-item__positionlikes">
+                <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
                 <span class="photos-item__numbers">143</span>
               </div>
             </li>
@@ -69,7 +68,7 @@
               <b class="photos-item__title">Дорога на север</b>
               <p class="photos-item__author">Автор фото: Петр</p>
               <div class="photos-item__positionlikes">
-                <button class="photos-item__likes" type="button"></button>
+                <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
                 <span class="photos-item__numbers">96</span>
               </div>
             </li>
@@ -77,8 +76,8 @@
               <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Фотография моста"></a>
               <b class="photos-item__title">Мост дьявола</b>
               <p class="photos-item__author">Автор фото: Антон</p>
-              <div>
-                <button class="photos-item__likes" type="button"></button>
+              <div  class="photos-item__positionlikes">
+                <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
                 <span class="photos-item__numbers">254</span>
               </div>
             </li>
@@ -95,13 +94,13 @@
         <b class="footer__title">#visitsedona</b>
         <ul class="social__list">
           <li class="social__item">
-            <a class="social__link social__link--twitter" href="https://twitter.com/sedona">Мы в Твиттере</a>
+            <a class="social__link social__link--twitter" href="https://twitter.com/sedona"><span class="visually-hidden">Мы в Твиттере</span></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--facebook" href="https://www.facebook.com/sedona">Мы в Фейсбуке</a>
+            <a class="social__link social__link--facebook" href="https://www.facebook.com/sedona"><span class="visually-hidden">Мы в Фейсбуке</span></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--youtube" href="https://www.youtube.com/sedona">Мы в Ютубе</a>
+            <a class="social__link social__link--youtube" href="https://www.youtube.com/sedona"><span class="visually-hidden">Мы в Ютубе</span></a>
           </li>
         </ul>
       </div>
@@ -110,7 +109,7 @@
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link copyright__link--htmlacademy" href="https://htmlacademy.ru/intensive/adaptive"></a>
       </div>
- 
+
     </footer>
 
   </body>
