Начало работы в модуле 4, 13.04.2020

--- a/source/index.html
+++ b/source/index.html
@@ -38,7 +38,7 @@
 
         <h2 class="visually-hidden">Причины для посещения городка Седона</h2>
         <div class="reasons__position">
-          <span class="reasons__index1 reasons--sedona"><img class="reasons__index" src="img/text-sedona-index.svg" width="281" height="214" alt="sedona"></span>
+          <div class="reasons__index1 reasons--sedona"><img class="reasons__index" src="img/text-sedona-index.svg" width="281" height="214" alt="sedona"></div>
           <p class="reasons__number-zero">Седона – небольшой <br> городок в Аризоне, <br> заслуживающий большего!</p>
           <p class="reasons__number-one">Рассмотрим 5 причин, по которым <br> Седона круче, чем Градн Каньон!</p>
         </div>
