--- a/source/form.html
+++ b/source/form.html
@@ -39,7 +39,7 @@
       <section class="form-section">
 
         <div class="form-head">
-          <span class="form-head--sedona"><img class="form-head__picture" src="img/text-sedona.svg" width="320" height="158" alt="sedona"></span>
+          <div class="form-head__position form-head--sedona"><img class="form-head__picture" src="img/text-sedona.svg" width="320" height="158" alt="sedona"></div>
           <h2 class="form-head__title">Оставьте свой отзыв</h2>
           <p class="form-head__text">Помогите нашим отелям стать лучше!<br>Оставьте отзыв о них, а так же о<br>посещённых вами <br>достопримечательностях</p>
         </div>
