--- a/source/photo.html
+++ b/source/photo.html
@@ -38,7 +38,7 @@
       <section class="photos">
 
         <div class="photos-head">
-          <span class="photos-head__position photos-head--sedona"><img class="photos-head__picture" src="img/text-sedona.svg" width="320" height="158" alt="sedona"></span>
+          <div class="photos-head__position photos-head--sedona"><img class="photos-head__picture" src="img/text-sedona.svg" width="320" height="158" alt="sedona"></div>
           <h2 class="photos-head__title">Фото и видео</h2>
           <p class="photos-head__text">Не можете решиться на пушетествие<br> из-за курса? Фотографии помогут <br> вам забыть о политике и экономике. </p>
         </div>
