Модуль 4, задание 1, правка 1, 17.04.2020

--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
     <link href="css/style.css" rel="stylesheet">
   </head>
 
@@ -15,15 +17,15 @@
         <div class="main-nav__wrapper">
           <button class="main-nav__button" type="button"><span class="visually-hidden">Кнопка меню</span></button>
           <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--active">
+            <li class="site-list__item site-list__item1 site-list__item--active">
               <a href="index.html">Главная</a>
             </li>
-            <li class="site-list__item"><a href="photo.html">Фото и видео</a></li>
-            <li class="site-list__item"><a href="form.html">Форма отзыва</a></li>
-            <li class="site-list__item site-list__item--strips">
+            <li class="site-list__item site-list__item2"><a href="photo.html">Фото и видео</a></li>
+            <li class="site-list__item site-list__item3"><a href="form.html">Форма отзыва</a></li>
+            <li class="site-list__item site-list__item4 site-list__item--strips">
               <a href="#">HTML ACADEMY</a>
             </li>
-            <li class="site-list__item site-list__item-down">
+            <li class="site-list__item site-list__item5 site-list__item-down">
               <a href="index.html"><img class="main-nav__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип туристического агенства «Седона»"></a>
             </li>
           </ul>
@@ -120,8 +122,8 @@
             </div>
           </fieldset>
 
-          <div class="send-toggle button">
-            <button class="button">Отправить отзыв</button>
+          <div class="send-toggle">
+            <button class="button-form">Отправить отзыв</button>
           </div>
         </form>
 
