--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="body">
@@ -14,15 +16,15 @@
         <div class="main-nav__wrapper">
           <button class="main-nav__button" type="button"><span class="visually-hidden">Кнопка меню</span></button>
           <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--active">
+            <li class="site-list__item site-list__item1 site-list__item--active">
               <a href="index.html">Главная</a>
             </li>
-            <li class="site-list__item"><a href="photo.html">Фото и видео</a></li>
-            <li class="site-list__item"><a href="form.html">Форма отзыва</a></li>
-            <li class="site-list__item site-list__item--strips">
+            <li class="site-list__item site-list__item2"><a href="photo.html">Фото и видео</a></li>
+            <li class="site-list__item site-list__item3"><a href="form.html">Форма отзыва</a></li>
+            <li class="site-list__item site-list__item4 site-list__item--strips">
               <a href="#">HTML ACADEMY</a>
             </li>
-            <li class="site-list__item site-list__item-down">
+            <li class="site-list__item site-list__item5 site-list__item-down">
               <a href="index.html"><img class="main-nav__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип туристического агенства «Седона»"></a>
             </li>
           </ul>
@@ -54,27 +56,29 @@
               <span class="realtown__picture"><img class="realtown__picture" src="img/main-city-mobile@1x.jpg" width="320" height="260" alt="фотография городка «Седона»"></span>
 
                 <ul class="advantages">
-                  <li class="advantages__item advantages__item--home">
+                  <li class="advantages__home advantages__home--home">
                     <b class="advantages__title">Жильe</b>
-                    <p class="advantages__description">Рекомендуем пожить в <br> настоящем мотеле, все как в<br>кино!</p>
+                    <p class="advantages__description">Рекомендуем пожить в <br> настоящем мотеле, все как в <br>кино!</p>
                   </li>
-                  <li class="advantages__item advantages__item--souvenires">
+                  <li class="advantages__souvenires advantages__souvenires--souvenires">
                     <b class="advantages__title">Сувениры</b>
                     <p class="advantages__description">Не только китайского, но и <br>местного производства</p>
                   </li>
-                  <li class="advantages__item advantages__item--meal">
+                  <li class="advantages__meal advantages__meal--meal">
                     <b class="advantages__title">Еда</b>
-                    <p class="advantages__description">Всегда заказывайте <br>фирменный бургер, вы не<br>разочаруетесь</p>
+                    <p class="advantages__description">Всегда заказывайте <br>фирменный бургер, вы не <br>разочаруетесь</p>
                   </li>
                 </ul>
             </div>
           </li>
 
           <li class="bridge">
-            <h3 class="bridge__title">Там есть мост дьявола</h3>
-            <span class="bridge__number">– №2 –</span>
-            <p class="bridge__recomendation">Да, по нему можно пройти! Если вы <br>осмелитесь, конечно</p>
-            <span class="bridge__picture"><img src="img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="Фотография моста"></span>
+            <div class="bridge__wrap">
+              <h3 class="bridge__title">Там есть мост дьявола</h3>
+              <span class="bridge__number">– №2 –</span>
+              <p class="bridge__recomendation">Да, по нему можно пройти! Если вы <br>осмелитесь, конечно</p>
+            </div>
+            <span class="bridge__picture"><img class="bridge__picture1" src="img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="Фотография моста"></span>
           </li>
           <li class="square places">
             <h3 class="places__title">Небольшая площадь</h3>
