--- a/source/photo.html
+++ b/source/photo.html
@@ -3,31 +3,33 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
 
     <header class="page-header">
 
-        <nav class="main-nav">
+      <nav class="main-nav">
 
-          <div class="main-nav__wrapper">
-            <button class="main-nav__button" type="button"><span class="visually-hidden">Кнопка меню</span></button>
-            <ul class="main-nav__list site-list">
-              <li class="site-list__item site-list__item--active">
-                <a href="index.html">Главная</a>
-              </li>
-              <li class="site-list__item"><a href="photo.html">Фото и видео</a></li>
-              <li class="site-list__item"><a href="form.html">Форма отзыва</a></li>
-              <li class="site-list__item site-list__item--strips">
-                <a href="#">HTML ACADEMY</a>
-              </li>
-              <li class="site-list__item site-list__item-down">
-                <a href="index.html"><img class="main-nav__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип туристического агенства «Седона»"></a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+        <div class="main-nav__wrapper">
+          <button class="main-nav__button" type="button"><span class="visually-hidden">Кнопка меню</span></button>
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item1 site-list__item--active">
+              <a href="index.html">Главная</a>
+            </li>
+            <li class="site-list__item site-list__item2"><a href="photo.html">Фото и видео</a></li>
+            <li class="site-list__item site-list__item3"><a href="form.html">Форма отзыва</a></li>
+            <li class="site-list__item site-list__item4 site-list__item--strips">
+              <a href="#">HTML ACADEMY</a>
+            </li>
+            <li class="site-list__item site-list__item5 site-list__item-down">
+              <a href="index.html"><img class="main-nav__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип туристического агенства «Седона»"></a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
     </header>
 
@@ -45,10 +47,12 @@
 
         <div class="photos-position">
           <ul class="photos-list">
-            <li class="photos-item">
-              <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Фотография степи"></a>
-              <b class="photos-item__title">Неродные просторы</b>
-              <p class="photos-item__author">Автор фото: Борис</p>
+            <li class="photos-item photos-item__sunset">
+              <a class="photos-item__position"><img class="photos-item__picture-sunset" src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Фотография степи"></a>
+              <div class="photos-item__text-wrap">
+                <b class="photos-item__title">Неродные просторы</b>
+                <p class="photos-item__author">Автор фото: Борис</p>
+              </div>
               <div class="photos-item__positionlikes">
                 <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
                 <span class="photos-item__numbers">1350</span>
@@ -56,27 +60,33 @@
             </li>
             <li class="photos-item">
               <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Фотография кактуса"></a>
-              <b class="photos-item__title">Местная растительность</b>
-              <p class="photos-item__author">Автор фото: Сергей</p>
-              <div class="photos-item__positionlikes">
+              <div class="photos-item__text-wrap1">
+                <b class="photos-item__title">Местная растительность</b>
+                <p class="photos-item__author">Автор фото: Сергей</p>
+              </div>
+              <div class="photos-item__positionlikes1">
                 <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
                 <span class="photos-item__numbers">143</span>
               </div>
             </li>
             <li class="photos-item">
               <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Фотография дороги в горах"></a>
-              <b class="photos-item__title">Дорога на север</b>
-              <p class="photos-item__author">Автор фото: Петр</p>
-              <div class="photos-item__positionlikes">
+              <div class="photos-item__text-wrap1">
+                <b class="photos-item__title">Дорога на север</b>
+                <p class="photos-item__author">Автор фото: Петр</p>
+              </div>
+              <div class="photos-item__positionlikes1">
                 <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
                 <span class="photos-item__numbers">96</span>
               </div>
             </li>
             <li class="photos-item">
               <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Фотография моста"></a>
-              <b class="photos-item__title">Мост дьявола</b>
-              <p class="photos-item__author">Автор фото: Антон</p>
-              <div  class="photos-item__positionlikes">
+              <div class="photos-item__text-wrap1">
+                <b class="photos-item__title">Мост дьявола</b>
+                <p class="photos-item__author">Автор фото: Антон</p>
+              </div>
+              <div  class="photos-item__positionlikes1">
                 <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
                 <span class="photos-item__numbers">254</span>
               </div>
