Задание 1 модуль 4 правка 2 18.04.2020

--- a/source/index.html
+++ b/source/index.html
@@ -7,53 +7,56 @@
     <meta name="format-detection" content="telephone=no">
     <link href="css/style.css" rel="stylesheet">
   </head>
+
   <body class="body">
 
-    <header class="page-header">
+    <div class="dimention">
 
-      <nav class="main-nav">
+      <header class="page-header">
 
-        <div class="main-nav__wrapper">
-          <button class="main-nav__button" type="button"><span class="visually-hidden">Кнопка меню</span></button>
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item1 site-list__item--active">
-              <a href="index.html">Главная</a>
-            </li>
-            <li class="site-list__item site-list__item2"><a href="photo.html">Фото и видео</a></li>
-            <li class="site-list__item site-list__item3"><a href="form.html">Форма отзыва</a></li>
-            <li class="site-list__item site-list__item4 site-list__item--strips">
-              <a href="#">HTML ACADEMY</a>
-            </li>
-            <li class="site-list__item site-list__item5 site-list__item-down">
-              <a href="index.html"><img class="main-nav__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип туристического агенства «Седона»"></a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+        <nav class="main-nav">
 
-    </header>
+          <div class="main-nav__wrapper">
+            <button class="main-nav__button" type="button"><span class="visually-hidden">Кнопка меню</span></button>
+            <ul class="main-nav__list site-list">
+              <li class="site-list__item site-list__item1 site-list__item--active">
+                <a href="index.html">Главная</a>
+              </li>
+              <li class="site-list__item site-list__item2"><a href="photo.html">Фото и видео</a></li>
+              <li class="site-list__item site-list__item3"><a href="form.html">Форма отзыва</a></li>
+              <li class="site-list__item site-list__item4 site-list__item--strips">
+                <a href="#">HTML ACADEMY</a>
+              </li>
+              <li class="site-list__item site-list__item5 site-list__item-down">
+                <a href="index.html"><img class="main-nav__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип туристического агенства «Седона»"></a>
+              </li>
+            </ul>
+          </div>
+        </nav>
 
-    <main class="page-main">
+      </header>
 
-      <h1 class="visually-hidden"> Сайт туристического агенства «Седона»</h1>
-      <section class="reasons">
+      <main class="page-main">
 
-        <h2 class="visually-hidden">Причины для посещения городка Седона</h2>
-        <div class="reasons__position">
-          <div class="reasons__index1 reasons--sedona"><img class="reasons__index" src="img/text-sedona-index.svg" width="281" height="214" alt="sedona"></div>
-          <p class="reasons__number-zero">Седона – небольшой <br> городок в Аризоне, <br> заслуживающий большего!</p>
-          <p class="reasons__number-one">Рассмотрим 5 причин, по которым <br> Седона круче, чем Градн Каньон!</p>
-        </div>
+        <h1 class="visually-hidden"> Сайт туристического агенства «Седона»</h1>
+        <section class="reasons">
 
-        <ol class="reasons-list">
-          <li class="realtown">
-            <div class="realtown__position">
-              <div class="realtown__wrap realtown__wrap--triangle">
-                <h3 class="realtown__title">Настоящий городок</h3>
-                <span class="realtown__number">– №1 –</span>
-                <p class="realtown__recomendation">Седона не аттрацион для туристов, <br> там течёт своя жизнь</p>
-              </div>
-              <span class="realtown__picture"><img class="realtown__picture" src="img/main-city-mobile@1x.jpg" width="320" height="260" alt="фотография городка «Седона»"></span>
+          <h2 class="visually-hidden">Причины для посещения городка Седона</h2>
+          <div class="reasons__position">
+            <div class="reasons__index1 reasons--sedona"><img class="reasons__index" src="img/text-sedona-index.svg" width="281" height="214" alt="sedona"></div>
+            <p class="reasons__number-zero">Седона – небольшой <br> городок в Аризоне, <br> заслуживающий большего!</p>
+            <p class="reasons__number-one">Рассмотрим 5 причин, по которым <br> Седона круче, чем Градн Каньон!</p>
+          </div>
+
+          <ol class="reasons-list">
+            <li class="realtown">
+              <div class="realtown__position">
+                <div class="realtown__wrap realtown__wrap--triangle">
+                  <h3 class="realtown__title">Настоящий городок</h3>
+                  <span class="realtown__number">– №1 –</span>
+                  <p class="realtown__recomendation">Седона не аттрацион для туристов, <br> там течёт своя жизнь</p>
+                </div>
+                <span class="realtown__picture"><img class="realtown__picture" src="img/main-city-mobile@1x.jpg" width="320" height="260" alt="фотография городка «Седона»"></span>
 
                 <ul class="advantages">
                   <li class="advantages__home advantages__home--home">
@@ -69,72 +72,73 @@
                     <p class="advantages__description">Всегда заказывайте <br>фирменный бургер, вы не <br>разочаруетесь</p>
                   </li>
                 </ul>
-            </div>
-          </li>
+              </div>
+            </li>
 
-          <li class="bridge">
-            <div class="bridge__wrap">
-              <h3 class="bridge__title">Там есть мост дьявола</h3>
-              <span class="bridge__number">– №2 –</span>
-              <p class="bridge__recomendation">Да, по нему можно пройти! Если вы <br>осмелитесь, конечно</p>
-            </div>
-            <span class="bridge__picture"><img class="bridge__picture1" src="img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="Фотография моста"></span>
-          </li>
-          <li class="square places">
-            <h3 class="places__title">Небольшая площадь</h3>
-            <span class="places__number">– №3 –</span>
-            <p class="places__recomendation">Все интересные места находятся <br>очень близко</p>
-          </li>
+            <li class="bridge">
+              <div class="bridge__wrap">
+                <h3 class="bridge__title">Там есть мост дьявола</h3>
+                <span class="bridge__number">– №2 –</span>
+                <p class="bridge__recomendation">Да, по нему можно пройти! Если вы <br>осмелитесь, конечно</p>
+              </div>
+              <span class="bridge__picture"><img class="bridge__picture1" src="img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="Фотография моста"></span>
+            </li>
+            <li class="square places">
+              <h3 class="places__title">Небольшая площадь</h3>
+              <span class="places__number">– №3 –</span>
+              <p class="places__recomendation">Все интересные места находятся <br>очень близко</p>
+            </li>
 
-          <li class="road places">
-            <h3 class="places__title">Красивая дорога</h3>
-            <span class="places__number">– №4 –</span>
-            <p class="places__recomendation">Ехать в Седону из Лас-Вегаса<br>совсем не скучно!</p>
-          </li>
+            <li class="road places">
+              <h3 class="places__title">Красивая дорога</h3>
+              <span class="places__number">– №4 –</span>
+              <p class="places__recomendation">Ехать в Седону из Лас-Вегаса<br>совсем не скучно!</p>
+            </li>
 
-          <li class="tourists places">
-            <h3 class="places__title">Мало туристов</h3>
-            <span class="places__number">– №5 –</span>
-            <p class="places__recomendation">Большинство едет в Гранд Каньон<br>и толпится там</p>
-          </li>
-        </ol>
-      </section>
+            <li class="tourists places">
+              <h3 class="places__title">Мало туристов</h3>
+              <span class="places__number">– №5 –</span>
+              <p class="places__recomendation">Большинство едет в Гранд Каньон<br>и толпится там</p>
+            </li>
+          </ol>
+        </section>
 
-      <section class="question">
-        <h2 class="question__text">Заинтересовались?</h2>
-        <p class="question__content">Укажите предполагаемые даты<br>поездки, и мы покажем вам лучшие <br> предложения гостиниц в Седоне</p>
-        <a class="question__search button" href="#">Найти гостиницу</a>
-      </section>
+        <section class="question">
+          <h2 class="question__text">Заинтересовались?</h2>
+          <p class="question__content">Укажите предполагаемые даты<br>поездки, и мы покажем вам лучшие <br> предложения гостиниц в Седоне</p>
+          <a class="question__search button" href="#">Найти гостиницу</a>
+        </section>
 
-      <section class="map">
-        <h2 class="visually-hidden">Часть страницы с картой</h2>
-        <span class="map-position"><img class="map__picture" src="img/bg-map-mobile@1x.jpg" width="320" height="350" alt="Карта"></span>
-      </section>
+        <section class="map">
+          <h2 class="visually-hidden">Часть страницы с картой</h2>
+          <span class="map-position"><img class="map__picture" src="img/bg-map-mobile@1x.jpg" width="320" height="350" alt="Карта"></span>
+        </section>
 
-    </main>
+      </main>
 
-    <footer class="footer">
+      <footer class="footer">
 
-      <div class="footer__social social">
-        <b class="footer__title">#visitsedona</b>
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--twitter" href="https://twitter.com/sedona"><span class="visually-hidden">Мы в Твиттере</span></a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--facebook" href="https://www.facebook.com/sedona"><span class="visually-hidden">Мы в Фейсбуке</span></a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtube" href="https://www.youtube.com/sedona"><span class="visually-hidden">Мы в Ютубе</span></a>
-          </li>
-        </ul>
-      </div>
+        <div class="footer__social social">
+          <b class="footer__title">#visitsedona</b>
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--twitter" href="https://twitter.com/sedona"><span class="visually-hidden">Мы в Твиттере</span></a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/sedona"><span class="visually-hidden">Мы в Фейсбуке</span></a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--youtube" href="https://www.youtube.com/sedona"><span class="visually-hidden">Мы в Ютубе</span></a>
+            </li>
+          </ul>
+        </div>
 
-      <div class="footer__copyright copyright">
-        <b class="copyright__text">Разработано</b>
-        <a class="copyright__link copyright__link--htmlacademy" href="https://htmlacademy.ru/intensive/adaptive"></a>
-      </div>
+        <div class="footer__copyright copyright">
+          <b class="copyright__text">Разработано</b>
+          <a class="copyright__link copyright__link--htmlacademy" href="https://htmlacademy.ru/intensive/adaptive"></a>
+        </div>
 
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
