--- a/source/photo.html
+++ b/source/photo.html
@@ -8,119 +8,120 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
+    <div class="dimention">
 
-    <header class="page-header">
+      <header class="page-header">
 
-      <nav class="main-nav">
+        <nav class="main-nav">
 
-        <div class="main-nav__wrapper">
-          <button class="main-nav__button" type="button"><span class="visually-hidden">Кнопка меню</span></button>
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item1 site-list__item--active">
-              <a href="index.html">Главная</a>
+          <div class="main-nav__wrapper">
+            <button class="main-nav__button" type="button"><span class="visually-hidden">Кнопка меню</span></button>
+            <ul class="main-nav__list site-list">
+              <li class="site-list__item site-list__item1 site-list__item--active">
+                <a href="index.html">Главная</a>
+              </li>
+              <li class="site-list__item site-list__item2"><a href="photo.html">Фото и видео</a></li>
+              <li class="site-list__item site-list__item3"><a href="form.html">Форма отзыва</a></li>
+              <li class="site-list__item site-list__item4 site-list__item--strips">
+                <a href="#">HTML ACADEMY</a>
+              </li>
+              <li class="site-list__item site-list__item5 site-list__item-down">
+                <a href="index.html"><img class="main-nav__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип туристического агенства «Седона»"></a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+
+      </header>
+
+      <main class="photo-page">
+
+        <h1 class="visually-hidden"> Страница с фотографиями для туристического агенства «Седона»</h1>
+
+        <section class="photos">
+
+          <div class="photos-head">
+            <div class="photos-head__position photos-head--sedona"><img class="photos-head__picture" src="img/text-sedona.svg" width="320" height="158" alt="sedona"></div>
+            <h2 class="photos-head__title">Фото и видео</h2>
+            <p class="photos-head__text">Не можете решиться на пушетествие<br> из-за курса? Фотографии помогут <br> вам забыть о политике и экономике. </p>
+          </div>
+
+          <div class="photos-position">
+            <ul class="photos-list">
+              <li class="photos-item photos-item__sunset">
+                <a class="photos-item__position"><img class="photos-item__picture-sunset" src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Фотография степи"></a>
+                <div class="photos-item__text-wrap">
+                  <b class="photos-item__title">Неродные просторы</b>
+                  <p class="photos-item__author">Автор фото: Борис</p>
+                </div>
+                <div class="photos-item__positionlikes">
+                  <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
+                  <span class="photos-item__numbers">1350</span>
+                </div>
+              </li>
+              <li class="photos-item">
+                <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Фотография кактуса"></a>
+                <div class="photos-item__text-wrap1">
+                  <b class="photos-item__title">Местная растительность</b>
+                  <p class="photos-item__author">Автор фото: Сергей</p>
+                </div>
+                <div class="photos-item__positionlikes1">
+                  <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
+                  <span class="photos-item__numbers">143</span>
+                </div>
+              </li>
+              <li class="photos-item">
+                <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Фотография дороги в горах"></a>
+                <div class="photos-item__text-wrap1">
+                  <b class="photos-item__title">Дорога на север</b>
+                  <p class="photos-item__author">Автор фото: Петр</p>
+                </div>
+                <div class="photos-item__positionlikes1">
+                  <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
+                  <span class="photos-item__numbers">96</span>
+                </div>
+              </li>
+              <li class="photos-item">
+                <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Фотография моста"></a>
+                <div class="photos-item__text-wrap1">
+                  <b class="photos-item__title">Мост дьявола</b>
+                  <p class="photos-item__author">Автор фото: Антон</p>
+                </div>
+                <div  class="photos-item__positionlikes1">
+                  <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
+                  <span class="photos-item__numbers">254</span>
+                </div>
+              </li>
+            </ul>
+          </div>
+
+        </section>
+
+      </main>
+
+      <footer class="footer">
+
+        <div class="footer__social social">
+          <b class="footer__title">#visitsedona</b>
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--twitter" href="https://twitter.com/sedona"><span class="visually-hidden">Мы в Твиттере</span></a>
             </li>
-            <li class="site-list__item site-list__item2"><a href="photo.html">Фото и видео</a></li>
-            <li class="site-list__item site-list__item3"><a href="form.html">Форма отзыва</a></li>
-            <li class="site-list__item site-list__item4 site-list__item--strips">
-              <a href="#">HTML ACADEMY</a>
+            <li class="social__item">
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/sedona"><span class="visually-hidden">Мы в Фейсбуке</span></a>
             </li>
-            <li class="site-list__item site-list__item5 site-list__item-down">
-              <a href="index.html"><img class="main-nav__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип туристического агенства «Седона»"></a>
+            <li class="social__item">
+              <a class="social__link social__link--youtube" href="https://www.youtube.com/sedona"><span class="visually-hidden">Мы в Ютубе</span></a>
             </li>
           </ul>
         </div>
-      </nav>
 
-    </header>
-
-    <main class="photo-page">
-
-      <h1 class="visually-hidden"> Страница с фотографиями для туристического агенства «Седона»</h1>
-
-      <section class="photos">
-
-        <div class="photos-head">
-          <div class="photos-head__position photos-head--sedona"><img class="photos-head__picture" src="img/text-sedona.svg" width="320" height="158" alt="sedona"></div>
-          <h2 class="photos-head__title">Фото и видео</h2>
-          <p class="photos-head__text">Не можете решиться на пушетествие<br> из-за курса? Фотографии помогут <br> вам забыть о политике и экономике. </p>
+        <div class="footer__copyright copyright">
+          <b class="copyright__text">Разработано</b>
+          <a class="copyright__link copyright__link--htmlacademy" href="https://htmlacademy.ru/intensive/adaptive"></a>
         </div>
 
-        <div class="photos-position">
-          <ul class="photos-list">
-            <li class="photos-item photos-item__sunset">
-              <a class="photos-item__position"><img class="photos-item__picture-sunset" src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Фотография степи"></a>
-              <div class="photos-item__text-wrap">
-                <b class="photos-item__title">Неродные просторы</b>
-                <p class="photos-item__author">Автор фото: Борис</p>
-              </div>
-              <div class="photos-item__positionlikes">
-                <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
-                <span class="photos-item__numbers">1350</span>
-              </div>
-            </li>
-            <li class="photos-item">
-              <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Фотография кактуса"></a>
-              <div class="photos-item__text-wrap1">
-                <b class="photos-item__title">Местная растительность</b>
-                <p class="photos-item__author">Автор фото: Сергей</p>
-              </div>
-              <div class="photos-item__positionlikes1">
-                <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
-                <span class="photos-item__numbers">143</span>
-              </div>
-            </li>
-            <li class="photos-item">
-              <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Фотография дороги в горах"></a>
-              <div class="photos-item__text-wrap1">
-                <b class="photos-item__title">Дорога на север</b>
-                <p class="photos-item__author">Автор фото: Петр</p>
-              </div>
-              <div class="photos-item__positionlikes1">
-                <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
-                <span class="photos-item__numbers">96</span>
-              </div>
-            </li>
-            <li class="photos-item">
-              <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Фотография моста"></a>
-              <div class="photos-item__text-wrap1">
-                <b class="photos-item__title">Мост дьявола</b>
-                <p class="photos-item__author">Автор фото: Антон</p>
-              </div>
-              <div  class="photos-item__positionlikes1">
-                <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
-                <span class="photos-item__numbers">254</span>
-              </div>
-            </li>
-          </ul>
-        </div>
-
-      </section>
-
-    </main>
-
-    <footer class="footer">
-
-      <div class="footer__social social">
-        <b class="footer__title">#visitsedona</b>
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--twitter" href="https://twitter.com/sedona"><span class="visually-hidden">Мы в Твиттере</span></a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--facebook" href="https://www.facebook.com/sedona"><span class="visually-hidden">Мы в Фейсбуке</span></a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtube" href="https://www.youtube.com/sedona"><span class="visually-hidden">Мы в Ютубе</span></a>
-          </li>
-        </ul>
-      </div>
-
-      <div class="footer__copyright copyright">
-        <b class="copyright__text">Разработано</b>
-        <a class="copyright__link copyright__link--htmlacademy" href="https://htmlacademy.ru/intensive/adaptive"></a>
-      </div>
-
-    </footer>
-
+      </footer>
+    </div>
   </body>
 </html>
