Задание 1 модуль 3, правка 3 18.04.2020

--- a/source/form.html
+++ b/source/form.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div class="dimention">
+    <div class="container">
       <header class="page-header">
 
         <nav class="main-nav">
