--- a/source/photo.html
+++ b/source/photo.html
@@ -8,7 +8,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <div class="dimention">
+    <div class="container">
 
       <header class="page-header">
 
