Модуль 5 задание 1 правка 2 от 21.04.2020

--- a/source/photo.html
+++ b/source/photo.html
@@ -49,7 +49,7 @@
           <div class="photos-position">
             <ul class="photos-list">
               <li class="photos-item photos-item__sunset">
-                <a class="photos-item__position"><img class="photos-item__picture-sunset" src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Фотография степи"></a>
+                <a class="photos-item__positionsunset"><img class="photos-item__picture-sunset" src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Фотография степи"></a>
                 <div class="photos-item__text-wrap">
                   <b class="photos-item__title">Неродные просторы</b>
                   <p class="photos-item__author">Автор фото: Борис</p>
