--- a/source/index.html
+++ b/source/index.html
@@ -92,20 +92,20 @@
             <li class="road places">
               <h3 class="places__title">Красивая дорога</h3>
               <span class="places__number">– №4 –</span>
-              <p class="places__recomendation">Ехать в Седону из Лас-Вегаса<br>совсем не скучно!</p>
+              <p class="places__recomendation places__shortrecomendation">Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
             </li>
 
             <li class="tourists places">
               <h3 class="places__title">Мало туристов</h3>
               <span class="places__number">– №5 –</span>
-              <p class="places__recomendation">Большинство едет <br> в Гранд Каньон<br>и толпится там</p>
+              <p class="places__recomendation">Большинство едет <br> в Гранд Каньон<br> и толпится там</p>
             </li>
           </ol>
         </section>
 
         <section class="question">
           <h2 class="question__text">Заинтересовались?</h2>
-          <p class="question__content">Укажите предполагаемые даты<br>поездки, и мы покажем вам лучшие <br> предложения гостиниц в Седоне</p>
+          <p class="question__content">Укажите предполагаемые даты<br> поездки, и мы покажем вам лучшие <br> предложения гостиниц в Седоне</p>
           <a class="question__search button" href="#">Найти гостиницу</a>
         </section>
 
