Модуль 5 задание 1 правка 3 от 22.04.2020

--- a/source/index.html
+++ b/source/index.html
@@ -86,7 +86,7 @@
             <li class="square places">
               <h3 class="places__title">Небольшая площадь</h3>
               <span class="places__number">– №3 –</span>
-              <p class="places__recomendation">Все интересные <br> места находятся <br>очень близко</p>
+              <p class="places__recomendation places__recomendation-square">Все интересные <br> места находятся <br>очень близко</p>
             </li>
 
             <li class="road places">
@@ -98,7 +98,7 @@
             <li class="tourists places">
               <h3 class="places__title">Мало туристов</h3>
               <span class="places__number">– №5 –</span>
-              <p class="places__recomendation">Большинство едет <br> в Гранд Каньон<br> и толпится там</p>
+              <p class="places__recomendation places__tourists-recomendation">Большинство едет <br> в Гранд Каньон<br> и толпится там</p>
             </li>
           </ol>
         </section>
